--- a/.github/workflows/publish_container_on_release.yaml
+++ b/.github/workflows/publish_container_on_release.yaml
@@ -9,6 +9,18 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      
+      - name: Build with Gradle
+        run: ./gradlew assemble
+      
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
