--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
-mainClassName = 'com.jresendiz27.muxedo.MuxedoServer'
+mainClassName = 'com.jresendiz27.muxedo.MuxedoApp'
 sourceCompatibility = 1.8
 
 repositories {
@@ -16,6 +16,7 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.5.10'
     compile 'io.vertx:vertx-web:3.9.1'
     compile 'io.vertx:vertx-core:3.9.1'
+    compile 'io.vertx:vertx-config:3.9.1'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 }
